--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -1,7 +1,8 @@
 ---
-title: Colophon
+title: colophon
 description: about this website 
-permalink: colophon
+permalink: /colophon
+layout: ../layouts/blog.astro
 ---
 
 ## about the colophon
@@ -22,4 +23,8 @@ I've rebuilt my website every year for the past 6 years.
 The first five editions didn't serve too much of a purpose besides 
 
 
-## 
+## code
+
+```js
+console.log('hi')
+```
