--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -22,9 +22,11 @@ I've rebuilt my website every year for the past 6 years.
 
 The first five editions didn't serve too much of a purpose besides 
 
+Here is a [[about|good wikilink]]
 
 ## code
 
 ```js
 console.log('hi')
 ```
+
