--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -1,15 +1,13 @@
 ---
 title: about
 description: about me
-permalink: /about
-layout: ../layouts/blog.astro
+slug: /about
 ---
 
 ## currently
 
-
 ## previously
 
-
 ### find me on:
+
 [bluesky](#)
