--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -1,16 +1,17 @@
 ---
 title: colophon
-description: about this website 
-permalink: /colophon
-layout: ../layouts/blog.astro
+description: about this website
+slug: /colophon
+# layout: ../layouts/blog.astro
 ---
 
 ## about the colophon
+
 > `/käləˌfän/`: an inscription at the end of a book or manuscript usually with facts about its production ([Merriam-Webster](https://www.merriam-webster.com/dictionary/colophon))
 
-Historically, writers would 
+Historically, writers would
 
-> A colophon is a useful place to share the principles that govern your website. Having the key principles that govern your site in one place means that any user who visits does not need to read through the archives of your site or speak with you to understand what mattered most to you when you constructed your site.34 
+> A colophon is a useful place to share the principles that govern your website. Having the key principles that govern your site in one place means that any user who visits does not need to read through the archives of your site or speak with you to understand what mattered most to you when you constructed your site.34
 
 ## my homepage for the internet
 
@@ -18,13 +19,12 @@ Historically, writers would
 
 I've rebuilt my website every year for the past 6 years.
 
-The first five editions didn't serve too much of a purpose besides 
+The first five editions didn't serve too much of a purpose besides
 
 Here is a [[about|good wikilink]]
 
 ## code
 
 ```js
-console.log('hi')
+console.log("hi")
 ```
-
