set up collections and sortfilter views

--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -1,7 +1,8 @@
 ---
-title: Foreword
+title: foreword
 description: the thing you always read last in a book
 date: 2024-02-19
+slug: /blog/foreword
 ---
 
 This is placeholder content
