--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -4,10 +4,14 @@ description: about bencuan
 slug: /about
 ---
 
+import ContactCard from '../../components/contactCard.tsx';
+
 ## currently
 
 ## previously
 
 ### find me on:
 
-[bluesky](#)
+### have my contact card
+
+<ContactCard />
