add icons to recipes

--- a/src/content/recipes/pecans.mdx
+++ b/src/content/recipes/pecans.mdx
@@ -2,7 +2,7 @@
 title: candied pecans
 description: nutty
 slug: pecans
-category: snacks
+category: building blocks
 time: 15
 difficulty: 0
 rating: 1
