--- a/src/content/recipes/teriyaki.mdx
+++ b/src/content/recipes/teriyaki.mdx
@@ -2,7 +2,7 @@
 title: Teriyaki Sauce
 description: saucy sauce
 slug: teriyaki
-category: sauces
+category: building blocks
 time: 15
 difficulty: 0
 rating: 2
