add more recipes

--- a/src/content/recipes/bananacake.mdx
+++ b/src/content/recipes/bananacake.mdx
@@ -12,11 +12,6 @@ veg: 1
 asian: false
 ---
 
-## notes
-
-- trust me on the pineapple. it is the secret ingredient.
-- my sweetness preference is on the low end. if you like sweet things, add an extra 1/3 to 1/2 cup sugar.
-
 ## tools
 
 - Large baking pan (9x13in)
@@ -24,25 +19,29 @@ asian: false
 - Oven
 - Small and large mixing bowls
 - Spatula
+- Large mixing bowl
+- Medium mixing bowl
 - Blender (optional)
 
 ## steps
 
 1. Preheat oven to 350 degrees.
 2. Mash bananas and pineapples together in a small bowl.
-3. In a large bowl, mix all dry ingredients together.
-4. Add all wet ingredients into the bowl, and mix.
-5. Add optional ingredients if desired.
-6. Bake 40 minutes.
+3. In a large bowl, mix all dry ingredients together.`
+4. In a medium bowl, mix all wet ingredients together.
+5. Add all wet ingredients into the big bowl, and mix.
+6. Add optional ingredients if desired.
+7. Bake 40 minutes.<Footnote n='1' client:idle />
+
 
 ## ingredients
 
 ### dry
 
 - 3 cups flour
-- 1 cup sugar
+- 1 cup sugar <Footnote n='2' client:idle />
 - 1 tsp salt
-- 1 tsp baking soda
+- 1 tsp baking soda <Footnote n='3' client:idle />
 - 1 tsp cinnamon
 
 ### wet
@@ -61,8 +60,9 @@ asian: false
 
 ## troubleshooting
 
-- didn't rise? your baking soda might be dead, buy a new box.
-- you will know it's done if you stick a knife/fork/toothpick in the middle, and it comes out clean.
+1. <FootnoteRef n='1' client:idle>you will know it's done if you stick a knife/fork/toothpick in the middle, and it comes out clean.</FootnoteRef>
+2. <FootnoteRef n='2' client:idle>my sweetness preference is on the low end. if you like sweet things, add an extra 1/3 to 1/2 cup sugar.</FootnoteRef>
+3. <FootnoteRef n='3' client:idle>didn't rise? your baking soda might be dead, buy a new box.</FootnoteRef>
 
 ## pairings
 
