--- a/src/content/recipes/lasagna.mdx
+++ b/src/content/recipes/lasagna.mdx
@@ -1,11 +1,11 @@
 ---
-title: lasagna
+title: Lasagna
 description: somebody toucha my spaghet
 slug: lasagna
 category: baking
 time: 90
 difficulty: 1
-rating: 2
+rating: 1
 price: $$
 spicy: 0
 veg: 0
@@ -20,7 +20,6 @@ asian: false
 - Large cooking pan
 - Oven
 - Small mixing bowl
-
 
 ## steps
 
