--- a/src/content/recipes/pecans.mdx
+++ b/src/content/recipes/pecans.mdx
@@ -1,5 +1,5 @@
 ---
-title: candied pecans
+title: Candied Pecans
 description: nutty
 slug: pecans
 category: building blocks
@@ -17,15 +17,9 @@ asian: false
 - If you can’t clean the pan immediately, soak it in hot water to dissolve the sugar.
 
 ## tools
-
-## steps
-
-1. Add a splash of water<Footnote n='1' client:idle /> and vanilla to pan.
-2. Mix sugar <Footnote n='2' client:idle />, salt, and cinnamon into the water when it starts to bubble.
-3. The pan should now contain a brown syrup. Mix in the pecans, and cook until the syrup starts to crystallize (should feel sticky, but not wet).
-4. Remove from heat and put on some parchment paper.<Footnote n='3' client:idle />
-Make sure to separate any pecans that get stuck together before they cool.
-   - Pecans shouldn't be sticky after they cool.
+- pan
+- spatula
+- parchment paper
 
 ## ingredients
 
@@ -36,8 +30,16 @@ Make sure to separate any pecans that get stuck together before they cool.
 - brown sugar
 - water
 
-## troubleshooting
+## steps
 
+1. Add a splash of water<Footnote n='1' client:idle /> and vanilla to pan.
+2. Mix sugar <Footnote n='2' client:idle />, salt, and cinnamon into the water when it starts to bubble.
+3. The pan should now contain a brown syrup. Mix in the pecans, and cook until the syrup starts to crystallize (should feel sticky, but not wet).
+4. Remove from heat and put on some parchment paper.<Footnote n='3' client:idle />
+Make sure to separate any pecans that get stuck together before they cool.
+   - Pecans shouldn't be sticky after they cool.
+
+## troubleshooting
 - <FootnoteRef n='1' client:idle>How much water should I put?</FootnoteRef>
   - More water makes the mixture more even, but will take longer to cook (and could
   burn). Generally be on the side of not enough water rather than too much.
