--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -7,11 +7,16 @@ slug: /about
 import ContactCard from '../../components/contactCard.tsx';
 
 ## currently
+ - :snowflake: codepoint fellow @ [sutter hill ventures](https://jeffburke.substack.com/p/sutter-hill-ventures-the-silent-builders)
+ - :turtle: building [turtlenet](https://tsh.sh)
+ - :memo: [[foreword|writing...]]
 
 ## previously
+ - :bear: computer science, psychology, data science @ uc berkeley
+ - :pencil2: teaching assistant for [cs186](https://cs186berkeley.net), [cs61a](https://cs61a.org/), [linux sysadmin decal](https://decal.ocf.io), [ATDP data structures & algorithms](https://atdp.berkeley.edu/)
+ - :penguin: doer of things @ [open computing facility](https://ocf.io)
+ - :joystick: game dev @ [hexcaliber](https://hexcaliber.dev)
 
-### find me on:
-
-### have my contact card
+## contact card
 
 <ContactCard />
