--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -13,8 +13,8 @@ import ContactCard from '../../components/contactCard.tsx';
 
 ## previously
  - :bear: computer science, psychology, data science @ uc berkeley
- - :pencil2: teaching assistant for [cs186](https://cs186berkeley.net), [cs61a](https://cs61a.org/), [linux sysadmin decal](https://decal.ocf.io), [ATDP data structures & algorithms](https://atdp.berkeley.edu/)
- - :penguin: doer of things @ [open computing facility](https://ocf.io)
+ - :pencil2: teaching assistant for [cs186](https://cs186berkeley.net), [cs61a](https://cs61a.org), [linux sysadmin decal](https://decal.ocf.io), [ATDP data structures & algorithms](https://atdp.berkeley.edu)
+ - :penguin: general manager @ [open computing facility](https://ocf.io)
  - :joystick: game dev @ [hexcaliber](https://hexcaliber.dev)
 
 ## contact card
