add more recipes

--- a/src/content/recipes/miso.mdx
+++ b/src/content/recipes/miso.mdx
@@ -13,16 +13,29 @@ asian: true
 ---
 
 ## tools
+ - pot
+ - ladle
 
 ## ingredients
-- 
+- [hondashi](https://www.amazon.com/Ajinomoto-Dashi-Soup-Stock-4-23/dp/B0002YB40O) <Footnote n='1' client:idle />
+- miso paste <Footnote n='2' client:idle />
+- tofu (firm or extra firm)
+- green onions
+- wakame (dried)
 
 ## steps
-1. 
+1. Chop the tofu into very small cubes. (smaller = better)
+2. Chop the green onions.
+3. Bring some water to a boil.
+4. Add hondashi to the boiling water according to the instructions on the package.<Footnote n='1' client:idle />
+5. Add the tofu and wakame to the pot and boil until wakame has fully expanded (about 5 minutes).
+6. Add miso paste and turn off the heat. (Do not boil the miso paste.)
+7. 
 
 ## troubleshooting
-1. <FootnoteRef n='1' client:idle></FootnoteRef>
-2. <FootnoteRef n='2' client:idle></FootnoteRef>
+1. <FootnoteRef n='1' client:idle>Hondashi is a fish broth base. For a vegan alternative, acquire some [kombu](https://en.wikipedia.org/wiki/Kombu) and boil for 20 minutes to make kombu dashi.</FootnoteRef>
+2. <FootnoteRef n='2' client:idle>If you're not sure what kind to get, I recommend Hikari white or low-sodium miso paste to start with.</FootnoteRef>
 
 ## pairings
  - Japanese breakfast: miso soup + grilled salmon + rice
+ - Eat with soba noodles or rice
