add archive readme

--- a/src/content/recipes/veggies.mdx
+++ b/src/content/recipes/veggies.mdx
@@ -38,8 +38,8 @@ asian: false
 ## <FootnoteRef n='1' client:idle>vegetable compatibility list</FootnoteRef>
 (this is a very opinionated list)
  - **S tier:** broccoli, broccolini, zucchini
- - **A tier:** cauliflower, brussels sprouts, asparagus, kale
- - **B tier:** carrots
+ - **A tier:** cauliflower, brussels sprouts, kale
+ - **B tier:** carrots, asparagus
  - **C tier:** bell peppers, onions
 
 ## troubleshooting
