--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -3,6 +3,7 @@ title: foreword
 description: the thing you always read last in a book
 date: 2024-02-19
 slug: /blog/foreword
+category: meta
 ---
 
 This is placeholder content
