about and colophon

--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -5,6 +5,7 @@ slug: /about
 ---
 
 import ContactCard from '../../components/contactCard.tsx';
+import '../../sass/about.scss';
 
 ## currently
  - :snowflake: codepoint fellow @ [sutter hill ventures](https://jeffburke.substack.com/p/sutter-hill-ventures-the-silent-builders)
