--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -1,6 +1,7 @@
 ---
 title: foreword
-description: the thing you always read last in a book
+description: it's time to do a thing
+image: foreword.png
 date: 2024-03-13
 slug: /blog/foreword
 category: meta
