fix reading rec link

--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -63,7 +63,7 @@ Everyone has a different level of interaction they're comfortable with, so I'll 
 
 2. Subscribe to my [substack](https://bencuan.substack.com). Updates on Wednesdays, guaranteed to make your midweek evenings just a little more exciting.
 
-3. Send me a [reading rec](https://tally.so/forms/meeJ1J/)! Let me know where you get your magical wisdom from, and maybe it'll turn into a fun conversation.
+3. Send me a [reading rec](https://tally.so/r/meeJ1J)! Let me know where you get your magical wisdom from, and maybe it'll turn into a fun conversation.
 
 4. [[contact]] me. I'm especially interested in meeting (and working with) talented people who have ideas about how we can ensure a positive, human-driven future for technology, the internet, and our urban landscapes.
 	- I am **not** interested in giving you a referral on linkedin, sorry.
