fix foreword spacing

--- a/src/content/blog/foreword.mdx
+++ b/src/content/blog/foreword.mdx
@@ -20,7 +20,7 @@ This is perhaps the most difficult, unnatural thing I've ever done on my own vol
 
 This is going to be fun.
 
-ben cuan
+ben cuan<br/>
 wednesday, march 13, 2024
 
 ## so here's the plan
@@ -66,6 +66,6 @@ Everyone has a different level of interaction they're comfortable with, so I'll 
 3. Send me a [reading rec](https://tally.so/forms/meeJ1J/)! Let me know where you get your magical wisdom from, and maybe it'll turn into a fun conversation.
 
 4. [[contact]] me. I'm especially interested in meeting (and working with) talented people who have ideas about how we can ensure a positive, human-driven future for technology, the internet, and our urban landscapes.
-	- I am **not** interested in giving you a referral on linkedin, sorry.
+	{/* - I am **not** interested in giving you a referral on linkedin, sorry. */}
 
 If I *do* know you, I don't care how long it's been (maybe you're my kindergarten teacher, student in my discussion section, old friend I lost touch with) - send a text, call, discord/messenger dm, email, whatever-  I'd love to catch up.  It'd be awkward for me to message you out of the blue, but since I'm specifically sending out this open invitation, it won't be awkward for you! :)
