redirect foreword -> blog/foreword

--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -10,7 +10,7 @@ import '../../sass/about.scss';
 ## currently
  - :snowflake: codepoint fellow @ [sutter hill ventures](https://jeffburke.substack.com/p/sutter-hill-ventures-the-silent-builders)
  - :turtle: building [turtlenet](https://tsh.sh)
- - :memo: [[foreword|writing...]]
+ - :memo: [[/blog/foreword|writing...]]
 
 ## previously
  - :bear: computer science, psychology, data science @ uc berkeley
