--- a/src/content/root/colophon.mdx
+++ b/src/content/root/colophon.mdx
@@ -435,7 +435,7 @@ Garamond and Fraktion are variable weight fonts, which mean they can do cool tra
 <div class="hoverweight">hover me!</div>
 
 ### links
-Mystery meat navigation may have died out, but it's still ridiculously easy to make mysterious links on a blog (like this!). 
+Mystery meat navigation may have died out, but it's still ridiculously easy to make mysterious links on a blog (like [this!](https://www.youtube.com/watch?v=hPq54gxHAFU)). 
 
 I do my best to put all external links in context ([click here if you like penguins](https://www.cabq.gov/artsculture/biopark/news/10-cool-facts-about-penguins)). There's also a hover tooltip just in case it's not clear where you're headed.
 
@@ -453,7 +453,7 @@ I'm toying with some additional components to keep building on top of the limite
 
 ## technical stuff
 
-This website is hosted on [Netlify](https://netlify.app) and is built with [Astro](https://astro.build) using a mixture of components (Astro, MDX, and React with typescript). Astro is the third build system I've used for this site (2018-2019 was static HTML, 2020-2021 used Eleventy, and 2022 used Gatsby) and my favorite so far. Look at those ✨build speeds ✨!
+This website is hosted on [Netlify](https://netlify.app) and is built with [Astro](https://astro.build) using a mixture of components (Astro, MDX, and React with typescript). Astro is the third build system I've used for this site (2018-2019 was static HTML, 2020-2021 used Eleventy, and 2022 used Gatsby) and my favorite so far. Look at those ✨ build speeds ✨!
 
 ``` json
 19:40:10 [build] Rearranging server assets...
