fix friendnet markdown link

--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -37,4 +37,4 @@
 
 <br />
 
-~ Want to add the friendnet to your own site? [Here's a portable Markdown file you can include.](https://github.com/64bitpandas/bencuan.me/blob/main/src/components/friends.mdx)
+~ Want to add the friendnet to your own site? [Here's a portable Markdown file you can include.](https://github.com/64bitpandas/bencuan.me/blob/main/src/components/friends.mdx?plain=1)
