add more friends

--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -33,7 +33,9 @@
 [Andy Tsai](https://www.ocf.berkeley.edu/~andytsai/) -
 [Eric Qian](https://enumc.com) - 
 [Omar Hossain](https://epicrider.github.io) - 
-[Vikram Peddinti](https://darkflamex1.github.io/)
+[Vikram Peddinti](https://darkflamex1.github.io/) -
+[Adarsh Iyer](https://adarshiyer.net) -
+[Elton Pinto](https://www.eltonpinto.me/)
 
 <br />
 
