add more friends (pt 2)

--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -30,12 +30,14 @@
 [Oliver Ni](https://oliver.ni) - 
 [Albert Ye](https://aly.sh) - 
 [Jonathan Zhang](https://rjz.lol) -
-[Andy Tsai](https://www.ocf.berkeley.edu/~andytsai/) -
+[Andy Tsai](https://www.ocf.berkeley.edu/~andytsai) -
 [Eric Qian](https://enumc.com) - 
 [Omar Hossain](https://epicrider.github.io) - 
-[Vikram Peddinti](https://darkflamex1.github.io/) -
+[Vikram Peddinti](https://darkflamex1.github.io) -
 [Adarsh Iyer](https://adarshiyer.net) -
-[Elton Pinto](https://www.eltonpinto.me/)
+[Elton Pinto](https://www.eltonpinto.me) - 
+[James Weng](https://jamesweng.com) -
+[Owen Goebel](https://oagoebel.github.io)
 
 <br />
 
