new essay + friend update

--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -37,7 +37,8 @@
 [Adarsh Iyer](https://adarshiyer.net) -
 [Elton Pinto](https://www.eltonpinto.me) - 
 [James Weng](https://jamesweng.com) -
-[Owen Goebel](https://oagoebel.github.io)
+[Owen Goebel](https://oagoebel.github.io) -
+[Tino Caer](https://tinocaer.com)
 
 <br />
 
