fix some typos (sfs)

--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -9,9 +9,6 @@ category: experiments
 
 v1.0, 2024
 
-
-
-
 ![sfstreets-map](/img/sfstreets/sfstreets.png)
 
 > **🚧 This document is a work in progress.**
@@ -30,7 +27,7 @@ This draft is a first attempt at a solution. The route starts off at the Bayshor
 **11-12 hours total**: Target arrival at Bayshore ~9am, arrival to Ocean Beach ~8:30pm (sunset time in early june)
  - The northbound Caltrain gets into Bayshore at 8:44am.
 
- **6 main walking segments**
+**6 main walking segments**
   - 6.5 hours to walk 16 miles (25 minute pace, casual walking)
   - 3-4 hours of breaks for food and sightseeing
   
@@ -83,7 +80,7 @@ This draft is a first attempt at a solution. The route starts off at the Bayshor
 **Part 4**
 
 25. SoMa
-26. FiDi
+26. Financial District
 27. The Embarcadero
 28. Chinatown
 29. North Beach
@@ -138,7 +135,7 @@ This draft is a first attempt at a solution. The route starts off at the Bayshor
 [map](https://maps.app.goo.gl/mecK7wMBqhE4RzTm9)
 ![sfstreets-map](/img/sfstreets/map-2.png)
 
-### Part 2.5: BART rom 16th/Mission to Glen Park
+### Part 2.5: BART from 16th/Mission to Glen Park
 
 A brief 5-minute southbound hop on BART.
 
@@ -164,7 +161,7 @@ A brief 5-minute southbound hop on BART.
 ![sfstreets-map](/img/sfstreets/map-3-5.png)
 
 
-### Part 4: Soma/FiDi/Embarcadero/Chinatown/North Beach/Fort Mason
+### Part 4: SoMa/FiDi/Embarcadero/Chinatown/North Beach/Fort Mason
 
 1 hour, 2.3 miles of walking.
  - **Start:** Embarcadero BART Station @ 3:30pm
@@ -178,7 +175,7 @@ A brief 5-minute southbound hop on BART.
 
 
 
-### Part 5: Fort Mason to Japantown via Fillmore / Pac Heights
+### Part 5: Fort Mason to Japantown via Fillmore / Pacific Heights
 
 1 hour leisurely walk over 2 miles, with a 1 hour dinner break at the end.
  - **Start:** Fort Mason @ 4:30pm
@@ -198,7 +195,7 @@ A brief 5-minute southbound hop on BART.
 
 [map](https://maps.app.goo.gl/7F5zBoDxphaLYVcP7)
 ![sfstreets-map](/img/sfstreets/map-5-5.png)
-`
+
 
 ### Part 6: Richmond to Sunset via GGP/Great Hwy
 
@@ -239,6 +236,6 @@ An improved or alternate route could include the following smaller neighborhoods
 	 - Add a 30-minute extension to the end of Part 4.
  - Palace of Fine Arts / Presidio / Golden Gate Bridge
 	 - They're deceptively far away. If you're up to rent a bike and do a loop up between Phases 4 and 5, that would probably work the best.
- - Actually going into SOMA (Oracle Park, Salesforce Park, etc)
+ - Actually going into SoMa (Oracle Park, Salesforce Park, etc)
 	 - Before getting off at Dogpatch in Part 1.5, keep going all the way to 4th and King. Walk to Moscone Center along 4th Street, then take the T back to Dogpatch.
 	 - Salesforce Park is a short walk from Embarcadero BART, and can be added as a loop before departing to Part 4.
