--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -20,7 +20,11 @@ SF is a very unique city, given its shape as a 7-mile-by-7-mile square surrounde
 
 This draft is a first attempt at a solution. The route starts off at the Bayshore Caltrain Station at 9am and ends it off walking along Ocean Beach at sunset, before we loop back to the BART line.
 
-**Anyone is welcome to join for any segment of the journey!** More details and updates on the date are coming soon.
+> **Anyone is welcome to join for any segment of the journey!**
+>
+> The inaugural SFS tour will take place on **Saturday, June 1, 2024**. <br/><br/>
+>
+> If you're interested in being involved, [contact me](https://bencuan.me/contact) and include your phone number so I can add you to a WhatsApp group with live location sharing. You can meet us at any point in the day :)
 
 ### A birds-eye view
 
