--- a/src/components/friends.mdx
+++ b/src/components/friends.mdx
@@ -12,6 +12,8 @@
 <a href="https://jaysa.net"><img src="/img/friends/jaysa.jpg" /></a>
 <a href="https://vimeo.com/943936691"><img src="/img/friends/tiffsun.png" /></a>
 <a href="https://rjz.lol"><img src="/img/friends/rjz.png" /></a>
+<a href="https://oliver.ni"><img src="/img/friends/oliver.png" /></a>
+<a href="https://nikhiljha.com"><img src="/img/friends/njha.png" /></a>
 <a href="https://www.ocf.berkeley.edu"><img src="/img/friends/ocf.png" /></a>
 <a href="https://tsh.sh"><img src="/img/friends/turtlenet.gif" /></a>
 
