--- a/src/content/root/about.mdx
+++ b/src/content/root/about.mdx
@@ -10,6 +10,7 @@ import '../../sass/about.scss';
 ## currently
  - :snowflake: codepoint fellow @ [sutter hill ventures](https://jeffburke.substack.com/p/sutter-hill-ventures-the-silent-builders)
  - :turtle: building [turtlenet](https://tsh.sh)
+ - :books: organizing [systemd.works](https://systemd.works)
  - :memo: [[/blog/foreword|writing...]]
 
 ## previously
