--- a/src/content/blog/sfstreets.mdx
+++ b/src/content/blog/sfstreets.mdx
@@ -22,7 +22,7 @@ This draft is a first attempt at a solution. The route starts off at the Bayshor
 
 > **Anyone is welcome to join for any segment of the journey!**
 >
-> The inaugural SFS tour will take place on **Saturday, June 22, 2024**. <br/><br/>
+> The inaugural SFS tour will take place in early July. <br/><br/>
 >
 > If you're interested in being involved, [contact me](https://bencuan.me/contact) and include your phone number so I can add you to a WhatsApp group with live location sharing. You can meet us at any point in the day :)
 
